@@ -1,0 +1,3 @@
+setFieldsFromXY.C
+
+EXE = $(FOAM_USER_APPBIN)/setFieldsFromXY
